infrastructure/malg/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: malg
  labels:
    app.kubernetes.io/part-of: malg
