infrastructure/malg/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: malg
  labels:
    app.kubernetes.io/name: api
    app.kubernetes.io/instance: malg-api
    app.kubernetes.io/part-of: malg
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: api
    app.kubernetes.io/instance: malg-api
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
