infrastructure/malg/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: malg
  labels:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/instance: frontend
    app.kubernetes.io/part-of: malg
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/instance: frontend
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
