infrastructure/malg/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: malg-frontend
  namespace: malg
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: frontend
      app.kubernetes.io/instance: frontend
  ingress:
    - fromEntities:
        - host
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: cloudflare-tunnel
            k8s:app.kubernetes.io/name: cloudflared
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: malg
            k8s:app.kubernetes.io/name: api
            k8s:app.kubernetes.io/instance: malg-api
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
          rules:
            dns:
              - matchPattern: "*"
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: malg-api
  namespace: malg
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: api
      app.kubernetes.io/instance: malg-api
  ingress:
    - fromEntities:
        - host
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: malg
            k8s:app.kubernetes.io/name: frontend
            k8s:app.kubernetes.io/instance: frontend
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: malg
            k8s:app.kubernetes.io/name: postgresql
            k8s:app.kubernetes.io/instance: postgresql
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: twenty
            k8s:app.kubernetes.io/name: server
            k8s:app.kubernetes.io/instance: server
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
          rules:
            dns:
              - matchPattern: "*"
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: malg-worker
  namespace: malg
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: worker
      app.kubernetes.io/instance: malg-worker
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: malg
            k8s:app.kubernetes.io/name: postgresql
            k8s:app.kubernetes.io/instance: postgresql
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: twenty
            k8s:app.kubernetes.io/name: server
            k8s:app.kubernetes.io/instance: server
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: litellm
            k8s:app.kubernetes.io/name: litellm
            k8s:app.kubernetes.io/instance: litellm
      toPorts:
        - ports:
            - port: "4000"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: malg
            k8s:app.kubernetes.io/name: lightpanda
            k8s:app.kubernetes.io/instance: lightpanda
      toPorts:
        - ports:
            - port: "9223"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: malg
            k8s:app.kubernetes.io/name: searxng
            k8s:app.kubernetes.io/instance: searxng-tor
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
          rules:
            dns:
              - matchPattern: "*"
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: malg-migration
  namespace: malg
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: malg-migration
      app.kubernetes.io/part-of: malg
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: malg
            k8s:app.kubernetes.io/name: postgresql
            k8s:app.kubernetes.io/instance: postgresql
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
          rules:
            dns:
              - matchPattern: "*"
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: malg-postgresql
  namespace: malg
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: postgresql
      app.kubernetes.io/instance: postgresql
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: malg
            k8s:app.kubernetes.io/name: api
            k8s:app.kubernetes.io/instance: malg-api
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: malg
            k8s:app.kubernetes.io/name: worker
            k8s:app.kubernetes.io/instance: malg-worker
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: malg
            k8s:app.kubernetes.io/name: malg-migration
            k8s:app.kubernetes.io/part-of: malg
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    - fromEntities:
        - host
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
  egress: []
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: malg-searxng
  namespace: malg
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: searxng
      app.kubernetes.io/instance: searxng
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: malg
            k8s:app.kubernetes.io/name: worker
            k8s:app.kubernetes.io/instance: malg-worker
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
  egress:
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
          rules:
            dns:
              - matchPattern: "*"
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: malg-lightpanda
  namespace: malg
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: lightpanda
      app.kubernetes.io/instance: lightpanda
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: malg
            k8s:app.kubernetes.io/name: worker
            k8s:app.kubernetes.io/instance: malg-worker
      toPorts:
        - ports:
            - port: "9223"
              protocol: TCP
  egress:
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
          rules:
            dns:
              - matchPattern: "*"
